# ai-dataparser

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: analyzed_calls.csv  analyzed_calls_langchain.csv  analyzed_calls_llamaindex.csv  call_transcript_sample.csv
notebook/: langchain_dataparser.ipynb  llamaindex_dataparser.ipynb
